--- a/web/.htaccess
+++ b/web/.htaccess
@@ -1,5 +1,13 @@
 RewriteEngine On
 
-RewriteCond %{SERVER_PORT} 80
+# If we receive a forwarded http request from a proxy...
+RewriteCond %{HTTP:X-Forwarded-Proto} =http [OR]
 
-RewriteRule ^(.*)$ https://www.bitinator.net/$1 [R,L]
+# ...or just a plain old http request directly from the client
+RewriteCond %{HTTP:X-Forwarded-Proto} =""
+RewriteCond %{HTTPS} !=on
+
+# Redirect to https version
+RewriteRule ^ https://%{HTTP_HOST}%{REQUEST_URI} [L,R=301]
+
+# Put the rest of your rewrite rules here
