--- a/web/.htaccess
+++ b/web/.htaccess
@@ -1,13 +1,7 @@
 RewriteEngine On
 
-# If we receive a forwarded http request from a proxy...
-RewriteCond %{HTTP:X-Forwarded-Proto} =http [OR]
+RewriteCond %{HTTPS} off
+RewriteRule ^(.*)$ https://www.bitinator.net/$1 [L,R=301]
 
-# ...or just a plain old http request directly from the client
-RewriteCond %{HTTP:X-Forwarded-Proto} =""
-RewriteCond %{HTTPS} !=on
-
-# Redirect to https version
-RewriteRule ^(.*)$ https://%{HTTP_HOST}%{REQUEST_URI} [L,R=301]
-
-# Put the rest of your rewrite rules here
+RewriteCond %{http_host} ^bitinator.net [NC]
+RewriteRule ^(.*)$ https://www.bitinator.net/$1 [L,R=301]
