--- a/web/.htaccess
+++ b/web/.htaccess
@@ -1,7 +1,5 @@
 RewriteEngine On
 
 RewriteCond %{HTTPS} off
-RewriteRule ^ https://www.bitinator.net/$1 [L,R=301]
+RewriteRule (.*) https://%{HTTP_HOST}%{REQUEST_URI} [R=301,L]
 
-RewriteCond %{http_host} ^bitinator.net [NC]
-RewriteRule ^ https://www.bitinator.net/$1 [L,R=301]
