change rewrites to an example from askapache

--- a/web/.htaccess
+++ b/web/.htaccess
@@ -1,11 +1,7 @@
 RewriteEngine On
 
-RewriteCond %{HTTPS} =on
-RewriteRule ^(.*)$ - [env=protocol:https]
-
-RewriteCond %{HTTPS} !=on
-RewriteRule ^(.*)$ - [env=protocol:http]
-
-RewriteCond %{HTTPS} !www.bitinator.net$ [NC]
-RewriteRule ^(.*)$ ${ENV:protocol}://www.bitinator.net/$1 [L,R=301]
+RewriteCond %{REQUEST_URI} !^/robots\.txt$ [NC]
+RewriteCond %{HTTP_HOST} !^www\.[a-z-]+\.[a-z]{2,6} [NC]
+RewriteCond %{HTTP_HOST} ([a-z-]+\.[a-z]{2,6})$   [NC]
+RewriteRule ^/(.*)$ http://%1/$1 [R=301,L]
 
