--- a/web/.htaccess
+++ b/web/.htaccess
@@ -1,11 +1,5 @@
 RewriteEngine On
-RewriteBase /
-
-# Require www subdomain
-RewriteCond %{HTTP_HOST} !^$
-RewriteCond %{HTTP_HOST} !^www\.bitinator\.net$ [NC]
-RewriteRule ^/(.*)$ http://www.bitinator.net/$1 [R=301,L]
 
 # Require SSL
 RewriteCond %{HTTPS} !=on [NC]
-RewriteRule ^.*$ https://%{SERVER_NAME}%{REQUEST_URI} [R,L]
+RewriteRule ^/?(.*) https://%{SERVER_NAME}/$1 [R,L]
