--- a/web/.htaccess
+++ b/web/.htaccess
@@ -1,6 +1,6 @@
 RewriteEngine On
 
-RewriteCond %{HTTP:X-Forwarded-Proto} !https
+# RewriteCond %{HTTP:X-Forwarded-Proto} !https
 RewriteCond %{HTTPS} off
 RewriteRule .* https://%{HTTP_HOST}%{REQUEST_URI} [R=302,L,NE]
 
