--- a/web/.htaccess
+++ b/web/.htaccess
@@ -1,8 +1,10 @@
-RewriteEngine On
 
-# RewriteCond %{HTTP:X-Forwarded-Proto} !https
-RewriteCond %{HTTPS} off
-RewriteRule .* https://%{HTTP_HOST}%{REQUEST_URI} [R=302,L,NE]
+# canonical: https://www.
+<IfModule mod_rewrite.c>
+	RewriteEngine On
+	RewriteCond %{HTTPS} off [OR]
+	RewriteCond %{HTTP_HOST} !^www\. [NC]
+	RewriteCond %{HTTP_HOST} ^(.*)$ [NC]
+	RewriteRule (.*) https://www.bitinator.net/$1 [L,R=302]
+</IfModule>
 
-RewriteCond %{HTTP_HOST} !^www\. [NC]
-RewriteRule .* https://www.%{HTTP_HOST}%{REQUEST_URI} [R=302,L,NE]
