--- a/web/.htaccess
+++ b/web/.htaccess
@@ -2,10 +2,18 @@
 # canonical: https://www.
 <IfModule mod_rewrite.c>
 	RewriteEngine On
-	RewriteCond %{HTTP:X-Forwarded-Proto} !https
-	RewriteCond %{HTTPS} off [OR]
-	RewriteCond %{HTTP_HOST} !^www\. [NC]
-	RewriteCond %{HTTP_HOST} ^(.*)$ [NC]
-	RewriteRule (.*) https://www.bitinator.net/$1 [L,R=303]
+
+	RewriteCond %{HTTPS} on [AND]
+	RewriteCond %{HTTP_HOST} ^\w+\.bitinator\.net$ [NC]
+	RewriteRule (.*) $1 [L]
+
+	RewriteCond %{HTTP:X-Forwarded-Proto} !https [OR]
+	RewriteCond %{HTTPS} off
+	RewriteRule (.*) https://%{HTTP_HOST}%{REQUEST_URI}
+
+	RewriteCond %{HTTP_HOST} !\w+\.bitinator\.net [NC]
+	RewriteRule (.*) https://www.%{HTTP_HOST}%{REQUEST_URI}
+
+	RewriteRule (.*) https://%{HTTP_HOST}%{REQUEST_URI} [L,R=303]
 </IfModule>
 
