--- a/web/.htaccess
+++ b/web/.htaccess
@@ -3,9 +3,9 @@
 <IfModule mod_rewrite.c>
 	RewriteEngine On
 
-	#RewriteCond %{HTTPS} on [AND]
-	#RewriteCond %{HTTP_HOST} ^\w+\.bitinator\.net$ [NC]
-	#RewriteRule (.*) $1 [L]
+	RewriteCond %{HTTPS} on [AND]
+	RewriteCond %{HTTP_HOST} ^\w+\.bitinator\.net$ [NC]
+	RewriteRule (.*) $1 [L]
 
 	#RewriteCond %{HTTP:X-Forwarded-Proto} !https [OR]
 	#RewriteCond %{HTTPS} off
