--- a/web/.htaccess
+++ b/web/.htaccess
@@ -7,13 +7,13 @@
 	RewriteCond %{HTTP_HOST} ^\w+\.bitinator\.net$ [NC]
 	RewriteRule (.*) https://%{HTTP_HOST}{REQUEST_URI} [L]
 
-	#RewriteCond %{HTTP:X-Forwarded-Proto} !https [OR]
-	#RewriteCond %{HTTPS} off
-	#RewriteRule (.*) https://%{HTTP_HOST}%{REQUEST_URI}
+	RewriteCond %{HTTP:X-Forwarded-Proto} !https [OR]
+	RewriteCond %{HTTPS} off
+	RewriteRule (.*) https://%{HTTP_HOST}%{REQUEST_URI}
 
-	#RewriteCond %{HTTP_HOST} !\w+\.bitinator\.net [NC]
-	#RewriteRule (.*) https://www.%{HTTP_HOST}%{REQUEST_URI}
+	RewriteCond %{HTTP_HOST} !\w+\.bitinator\.net [NC]
+	RewriteRule (.*) https://www.%{HTTP_HOST}%{REQUEST_URI}
 
-	#RewriteRule (.*) https://%{HTTP_HOST}%{REQUEST_URI} [L,R=303]
+	RewriteRule (.*) https://%{HTTP_HOST}%{REQUEST_URI} [L,R=303]
 </IfModule>
 
