--- a/web/.htaccess
+++ b/web/.htaccess
@@ -5,7 +5,7 @@
 
 	RewriteCond %{HTTPS} on
 	RewriteCond %{HTTP_HOST} ^\w+\.bitinator\.net$ [NC]
-	RewriteRule (.*) https://%{HTTP_HOST}{REQUEST_URI} [L]
+	RewriteRule (.*) $1 [L]
 
 	RewriteCond %{HTTP:X-Forwarded-Proto} !https [OR]
 	RewriteCond %{HTTPS} off
