--- a/web/.htaccess
+++ b/web/.htaccess
@@ -5,7 +5,7 @@
 
 	RewriteCond %{HTTPS} on
 	RewriteCond %{HTTP_HOST} ^\w+\.bitinator\.net$ [NC]
-	RewriteRule (.*) $1 [L]
+	RewriteRule (.*) $1 [END]
 
 	RewriteCond %{HTTP:X-Forwarded-Proto} !https [OR]
 	RewriteCond %{HTTPS} off
