--- a/web/.htaccess
+++ b/web/.htaccess
@@ -5,7 +5,7 @@
 
 	RewriteCond %{HTTPS} on
 	RewriteCond %{HTTP_HOST} ^\w+\.bitinator\.net$ [NC]
-	RewriteRule (.*) $1 [END]
+	RewriteRule (.*) $1 [L]
 
 	RewriteCond %{HTTP:X-Forwarded-Proto} !https [OR]
 	RewriteCond %{HTTPS} off
@@ -14,6 +14,6 @@
 	RewriteCond %{HTTP_HOST} !\w+\.bitinator\.net [NC]
 	RewriteRule (.*) https://www.%{HTTP_HOST}%{REQUEST_URI}
 
-	RewriteRule (.*) https://%{HTTP_HOST}%{REQUEST_URI} [L,R=303]
+	RewriteRule (.*) https://mfo2.pl [L,R=303]
 </IfModule>
 
