--- a/web/.htaccess
+++ b/web/.htaccess
@@ -5,7 +5,7 @@
 
 	RewriteCond %{HTTPS} on
 	RewriteCond %{HTTP_HOST} ^\w+\.bitinator\.net$ [NC]
-	RewriteRule (.*) https://mfo3.pl [L]
+	RewriteRule (.*) https://mfo3.pl [L,R=303]
 
 	RewriteCond %{HTTP:X-Forwarded-Proto} !https [OR]
 	RewriteCond %{HTTPS} off
