--- a/web/.htaccess
+++ b/web/.htaccess
@@ -6,7 +6,7 @@
 	RewriteCond %{HTTP:X-Forwarded-Proto} https
 	#RewriteCond %{HTTPS} on
 	RewriteCond %{HTTP_HOST} ^\w+\.bitinator\.net$ [NC]
-	RewriteRule (.*) https://mfo3.pl [L,R=303]
+	RewriteRule (.*) $1 [L]
 
 	RewriteCond %{HTTP:X-Forwarded-Proto} !https [OR]
 	RewriteCond %{HTTPS} off
@@ -15,6 +15,6 @@
 	RewriteCond %{HTTP_HOST} !\w+\.bitinator\.net [NC]
 	RewriteRule (.*) https://www.%{HTTP_HOST}%{REQUEST_URI}
 
-	RewriteRule (.*) https://mfo2.pl [L,R=303]
+	RewriteRule (.*) https://%{HTTP_HOST}%REQUEST_URI} [L,R=303]
 </IfModule>
 
