--- a/web/.htaccess
+++ b/web/.htaccess
@@ -2,15 +2,14 @@
 <IfModule mod_rewrite.c>
         RewriteEngine On
 
-        RewriteCond %{SERVER_PORT} 443 [OR]
-	RewriteCond %{HTTP:X-Forwarded-Proto} https [OR]
-	RewriteCond %{HTTPS} on
+        RewriteCond %{HTTP:X-Forwarded-Proto} https [OR]
+        RewriteCond %{HTTPS} on
         RewriteCond %{HTTP_HOST} ^(www|todo) [NC]
         RewriteRule (.*) $1 [L]
 
-        RewriteCond %{SERVER_PORT} 80
-	RewriteCond %{HTTP:X-Forwarded-Proto} !https
-	RewriteCond %{HTTPS} !=on
+        RewriteCond %{HTTP:X-Forwarded-Proto} =http [OR]
+        RewriteCond %{HTTP:X-Forwarded-Proto} =""
+        RewriteCond %{HTTPS} !=on
         RewriteRule ^ https://%{HTTP_HOST}%{REQUEST_URI}
 
         RewriteCond %{HTTP_HOST} ^bitinator\.net [NC]
