--- a/web/.htaccess
+++ b/web/.htaccess
@@ -7,10 +7,10 @@
         RewriteCond %{HTTP_HOST} ^(www|todo) [NC]
         RewriteRule (.*) $1 [L]
 
-        #RewriteCond %{HTTP:X-Forwarded-Proto} =http [OR]
-        #RewriteCond %{HTTP:X-Forwarded-Proto} =""
-        #RewriteCond %{HTTPS} !=on
-        #RewriteRule ^ https://%{HTTP_HOST}%{REQUEST_URI}
+        RewriteCond %{HTTP:X-Forwarded-Proto} =http [OR]
+        RewriteCond %{HTTP:X-Forwarded-Proto} =""
+        RewriteCond %{HTTPS} !=on
+        RewriteRule ^ https://%{HTTP_HOST}%{REQUEST_URI} [L,R=303]
 
         #RewriteCond %{HTTP_HOST} ^bitinator\.net [NC]
         #RewriteRule (.*) https://www.%{HTTP_HOST}%{REQUEST_URI}
