--- a/web/.htaccess
+++ b/web/.htaccess
@@ -15,5 +15,5 @@
         RewriteCond %{HTTP_HOST} ^bitinator\.net [NC]
         RewriteRule ^ https://www.%{HTTP_HOST}%{REQUEST_URI}
 
-        RewriteRule (.*) https://mfo2.pl [L,R=303]
+        RewriteRule (.*) $1 [L,R=303]
 </IfModule>
