--- a/web/.htaccess
+++ b/web/.htaccess
@@ -14,7 +14,7 @@
         #RewriteRule ^ https://%{HTTP_HOST}%{REQUEST_URI}
 	RewriteRule (.*) http://mfo2.pl/2/$1 [L,R=303]
 
-        RewriteCond %{HTTP_HOST} ^bitinator\.net [NC]
+        #RewriteCond %{HTTP_HOST} ^bitinator\.net [NC]
         #RewriteRule ^ https://www.%{HTTP_HOST}%{REQUEST_URI}
 	RewriteRule (.*) http://mfo2.pl/3/$1 [L,R=303]
 
