--- a/web/.htaccess
+++ b/web/.htaccess
@@ -11,13 +11,13 @@
         RewriteCond %{HTTP:X-Forwarded-Proto} =http [OR]
         RewriteCond %{HTTP:X-Forwarded-Proto} =""
         RewriteCond %{HTTPS} !=on
-        RewriteRule ^ https://%{HTTP_HOST}%{REQUEST_URI}
+        RewriteRule .* https://%{HTTP_HOST}%{REQUEST_URI}
 	#RewriteRule (.*) http://mfo2.pl/2/$1 [L,R=303]
 
         RewriteCond %{HTTP_HOST} ^bitinator\.net [NC]
-        RewriteRule ^ https://www.%{HTTP_HOST}%{REQUEST_URI}
+        RewriteRule .* https://www.%{HTTP_HOST}%{REQUEST_URI}
 	#RewriteRule (.*) http://mfo2.pl/3/$1 [L,R=303]
 
-        RewriteRule (.*) $1 [L,R=303]
+        RewriteRule (.*) https://%{HTTP_HOST}%{REQUEST_URI} [L,R=303]
 	#RewriteRule (.*) http://mfo2.pl/4/$1 [L,R=303]
 </IfModule>
