--- a/web/.htaccess
+++ b/web/.htaccess
@@ -4,20 +4,16 @@
 
         RewriteCond %{HTTP:X-Forwarded-Proto} https [OR]
         RewriteCond %{HTTPS} on
-        RewriteCond %{HTTP_HOST} ^(www|todo).* [NC]
+        RewriteCond %{HTTP_HOST} ^\w+\.bitinator\.net [NC]
         RewriteRule (.*) $1 [L]
-	#RewriteRule (.*) http://mfo2.pl/1/$1 [L,R=303]
 
         RewriteCond %{HTTP:X-Forwarded-Proto} =http [OR]
         RewriteCond %{HTTP:X-Forwarded-Proto} =""
         RewriteCond %{HTTPS} !=on
         RewriteRule .* https://%{HTTP_HOST}%{REQUEST_URI}
-	#RewriteRule (.*) http://mfo2.pl/2/$1 [L,R=303]
 
-        RewriteCond %{HTTP_HOST} ^bitinator\.net.* [NC]
+        RewriteCond %{HTTP_HOST} ^bitinator\.net [NC]
         RewriteRule .* https://www.%{HTTP_HOST}%{REQUEST_URI}
-	#RewriteRule (.*) http://mfo2.pl/3/$1 [L,R=303]
 
-        RewriteRule (.*) https://%{HTTP_HOST}%{REQUEST_URI} [L,R=303]
-	#RewriteRule (.*) http://mfo2.pl/4/$1 [L,R=303]
+        RewriteRule (.*) $1 [L,R=303]
 </IfModule>
