--- a/web/.htaccess
+++ b/web/.htaccess
@@ -4,7 +4,7 @@
 
         RewriteCond %{HTTP:X-Forwarded-Proto} https [OR]
         RewriteCond %{HTTPS} on
-        RewriteCond %{HTTP_HOST} ^\w+\.bitinator\.net [NC]
+        RewriteCond %{HTTP_HOST} ^\w+\.bitinator\.net.* [NC]
         RewriteRule (.*) $1 [L]
 
         RewriteCond %{HTTP:X-Forwarded-Proto} =http [OR]
@@ -12,7 +12,7 @@
         RewriteCond %{HTTPS} !=on
         RewriteRule .* https://%{HTTP_HOST}%{REQUEST_URI}
 
-        RewriteCond %{HTTP_HOST} ^bitinator\.net [NC]
+        RewriteCond %{HTTP_HOST} ^bitinator\.net.* [NC]
         RewriteRule .* https://www.%{HTTP_HOST}%{REQUEST_URI}
 
         RewriteRule (.*) $1 [L,R=303]
