--- a/web/apache_app.conf
+++ b/web/apache_app.conf
@@ -1,9 +1,9 @@
 <VirtualHost *:80>
 	ServerName www.bitinator.net
-	DocumentRoot www
+	DocumentRoot /app/web/www
 </VirtualHost>
 <VirtualHost *:80>
 	ServerName todo.bitinator.net
-	DocumentRoot todo
+	DocumentRoot /app/web/todo
 </VirtualHost>
 
