add permissions for dir

--- a/web/apache_app.conf
+++ b/web/apache_app.conf
@@ -5,5 +5,9 @@
 <VirtualHost *:80>
 	ServerName todo.bitinator.net
 	DocumentRoot /app/web/todo
+	<Directory /app/web/todo/>
+		Order allow,deny
+		Allow from all
+	</Directory>
 </VirtualHost>
 
